--- a/Orders/Orders.Frontend/Shared/GenericList.razor
+++ b/Orders/Orders.Frontend/Shared/GenericList.razor
@@ -4,10 +4,7 @@
 {
     @if(Loading is null)
     {
-        <div class="d-flex justify-content-center align-items-center">
-            <img src="https://cdn.dribbble.com/userupload/22852131/file/original-b11fb5084ec481cba3572faccd00732c.gif">
-        </div>
-
+        <Loading/>
     }
     else
     {
