--- a/Orders/Orders.Frontend/Pages/Categories/CategoryCreate.razor
+++ b/Orders/Orders.Frontend/Pages/Categories/CategoryCreate.razor
@@ -2,5 +2,7 @@
 
 <h3>Crear Categoría</h3>
 
-<CategoryForm @ref="categoryForm" Category="category" OnValidSubmit="CreateAsync" ReturnAction="Return" />
+<FormWithName @ref="categoryForm" Label="Categoría: " Model="category" OnValidSubmit="CreateAsync" ReturnAction="Return" />
+
+
 
