Pagination on states and cities

--- a/Orders/Orders.Frontend/Pages/Categories/CategoriesIndex.razor
+++ b/Orders/Orders.Frontend/Pages/Categories/CategoriesIndex.razor
@@ -9,10 +9,15 @@
 
 <GenericList MyList="Categories">
     <Body>
+        <Pagination CurrentPage="currentPage"
+                    TotalPages="totalPages"
+                    SelectedPage="SelectedPageAsync" />
+
         <table class="table table-striped">
             <thead>
                 <tr>
                     <th>Categoría</th>
+                    <th style="width:140px"></th>
                     <th></th>
                 </tr>
             </thead>
