--- a/Orders/Orders.Frontend/Pages/Countries/CountriesIndex.razor
+++ b/Orders/Orders.Frontend/Pages/Countries/CountriesIndex.razor
@@ -1,6 +1,5 @@
 ﻿@page "/countries"
 
-
 <h3>Paises</h3>
 
 <div class="mb-3">
@@ -9,12 +8,17 @@
 
 <GenericList MyList="Countries">
     <Body>
+        <Pagination CurrentPage="currentPage" 
+            TotalPages="totalPages"
+            SelectedPage="SelectedPageAsync" />
+
         <table class="table table-striped">
             <thead>
                 <tr>
                     <th>País</th>
-                    <th>Departamentos / Estados</th>
-                    <th></th>
+                    <th style="width:210px">Estados / Departamentos</th>
+                    <th style="width:210px"></th>
+                    
                 </tr>
             </thead>
             <tbody>
